🙈 Add provider.tf to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 .envrc.*
 .terraform.lock.hcl
+provider.tf
 
 # Created by https://www.toptal.com/developers/gitignore/api/archive,archives,backup,direnv,dotenv,emacs,linux,macos,nohup,ssh,tags,vim,windows,zsh,vs,visualstudio,terraform
 
